--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,9 +4,9 @@ main = "src/server.js"
 compatibility_date = "2024-01-01"
 
 # D1 数据库绑定
-#[[d1_databases]]
-#binding = "TEMP_MAIL_DB"
-#database_name = "maill_free_db" #你的d1数据库名称
+[[d1_databases]]
+binding = "TEMP_MAIL_DB"
+database_name = "maill_free_db" #你的d1数据库名称
 #database_id = "7a818c65-1220-4cb7-8a94-773808f9c49" # 你的database_id
 
 # 环境变量
