--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@ compatibility_date = "2024-01-01"
 [[d1_databases]]
 binding = "TEMP_MAIL_DB"
 database_name = "maill_free_db" #你的d1数据库名称
-#database_id = "7a818c65-1220-4cb7-8a94-773808f9c49" # 你的database_id
+database_id = "7a818c65-1220-4cb7-8a94-773808f9c495" # 你的database_id
 
 # 环境变量
 
